--- a/index.html
+++ b/index.html
@@ -2,15 +2,14 @@
 <html lang="en">
 
 <head>
-
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Notes App</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <script src="https://kit.fontawesome.com/96ab48350d.js" crossorigin="anonymous"></script>
-    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
+        <script src="https://kit.fontawesome.com/96ab48350d.js" crossorigin="anonymous"></script>
+        <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
 </head>
 
 <body>
@@ -30,7 +29,7 @@
 
             </ul>
             <form class="form-inline my-2 my-lg-0">
-
+                
                 <input class="form-control mr-sm-2" id="searchTxt" type="search" placeholder="Search"
                     aria-label="Search">
                 <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
@@ -38,10 +37,9 @@
         </div>
     </nav>
 
-    <form action="">
-        <button type="button" id="addItemBox" class="btn btn-success float-right mt-1 mr-1"> <i class="fas fa-plus"></i>
-            Add</button>
-    </form>
+<form action="">
+    <button type="button" id="addItemBox" class="btn btn-success float-right mt-1 mr-1"> <i class="fas fa-plus"></i> Add</button>
+</form>
     <div class="container my-3" id="addItem" style="display:block;">
         <h1>The Notes</h1>
         <div class="card">
@@ -67,9 +65,21 @@
         <div id="notes" class="row container-fluid"> </div>
     </div>
 
-    F
 
-    </script>
+    <script type="text/javascript">
+        $(document).ready(function(){
+        setTimeout(function(){
+          $('#addItem').css('display','none');
+        },100);
+        });
+        $('#addItemBox').click(function(){
+         $('#addItem').css('display','block');
+        });
+        $('#ExitBtn').click(function(){
+         $('#addItem').css('display','none');
+        });
+
+      </script>
 
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js"
         integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo"
@@ -80,7 +90,7 @@
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
         integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
         crossorigin="anonymous"></script>
-    <script src="app.js"></script>
+    <script src="js/app.js"></script>
 </body>
 
 </html>
